--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ludo Bermejo",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.15.3",
     "express": "^4.14.1",
     "jest": "^18.1.0",
     "moment": "^2.17.1",
