--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-router": "^3.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
