--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "15.4.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
