--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-3": "^6.22.0",
     "css-loader": "^0.26.1",
+    "deep-freeze-strict": "^1.1.1",
     "enzyme": "^2.7.1",
+    "eslint-import-resolver-babel-module": "^3.0.0",
+    "eslint-import-resolver-babel-module-alias": "^1.5.1",
+    "eslint-plugin-import": "^2.2.0",
     "foundation-sites": "^6.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^18.1.0",
