--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-uuid": "^1.4.7",
     "react": "15.4.2",
     "react-dom": "15.4.2",
+    "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
@@ -34,9 +35,6 @@
     "css-loader": "^0.26.1",
     "deep-freeze-strict": "^1.1.1",
     "enzyme": "^2.7.1",
-    "eslint-import-resolver-babel-module": "^3.0.0",
-    "eslint-import-resolver-babel-module-alias": "^1.5.1",
-    "eslint-plugin-import": "^2.2.0",
     "foundation-sites": "^6.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^18.1.0",
