--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "express": "^4.14.1",
+    "firebase": "^3.6.9",
     "jest": "^18.1.0",
     "moment": "^2.17.1",
     "momentjs": "^2.0.0",
